add part of segment

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.swp
+*.swo
+target
+.classpath
+.project
+.settings
+.svn
+output
+.idea
+*.iml
+*.pyc
+logs/
+*MANIFEST
+*artifacts
+.DS_Store
