--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,12 @@
         <module>raft-java-example</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+    </dependencies>
+
 </project>
