--- a/raft-java-core/pom.xml
+++ b/raft-java-core/pom.xml
@@ -37,9 +37,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.wenweihu86.rpc</groupId>
+            <groupId>com.github.wenweihu86.rpc</groupId>
             <artifactId>rpc-java</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
