--- a/raft-java-core/pom.xml
+++ b/raft-java-core/pom.xml
@@ -2,12 +2,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.github.wenweihu86.raft</groupId>
-        <artifactId>raft-java-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-
     <groupId>com.github.wenweihu86.raft</groupId>
     <artifactId>raft-java</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -40,6 +34,11 @@
             <groupId>com.github.wenweihu86.rpc</groupId>
             <artifactId>rpc-java</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
