--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>raft-java-core</module>
         <module>raft-java-example</module>
+        <module>raft-java-admin</module>
     </modules>
 
 </project>
