--- a/raft-java-core/pom.xml
+++ b/raft-java-core/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.wenweihu86.raft</groupId>
-    <artifactId>raft-java</artifactId>
+    <artifactId>raft-java-core</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>raft-java</name>
+    <name>raft-java-core</name>
     <url>http://maven.apache.org</url>
 
     <properties>
