--- a/raft-java-example/pom.xml
+++ b/raft-java-example/pom.xml
@@ -32,7 +32,7 @@
     <dependencies>
         <dependency>
             <groupId>com.github.wenweihu86.raft</groupId>
-            <artifactId>raft-java</artifactId>
+            <artifactId>raft-java-core</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
