--- a/raft-java-admin/pom.xml
+++ b/raft-java-admin/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.wenweihu86.raft</groupId>
     <artifactId>raft-java-admin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>raft-java-admin</name>
