--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.wenweihu86.raft</groupId>
-    <artifactId>raft-java-parent</artifactId>
-    <version>1.2.0</version>
+    <artifactId>raft-java-all</artifactId>
+    <version>1.3.0</version>
     <packaging>pom</packaging>
 
-    <name>raft-java-parent</name>
+    <name>raft-java-all</name>
     <url>http://maven.apache.org</url>
 
     <properties>
