修复example打包部署错误

--- a/raft-java-example/pom.xml
+++ b/raft-java-example/pom.xml
@@ -78,6 +78,7 @@
                     <descriptors>
                         <decriptor>src/main/assembly/assembly.xml</decriptor>
                     </descriptors>
+                    <tarLongFileMode>posix</tarLongFileMode>
                 </configuration>
                 <executions>
                     <execution>
