--- a/raft-java-admin/pom.xml
+++ b/raft-java-admin/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.wenweihu86.raft</groupId>
     <artifactId>raft-java-admin</artifactId>
-    <version>1.8.0</version>
+    <version>1.9.0</version>
     <packaging>jar</packaging>
 
     <name>raft-java-admin</name>
@@ -34,7 +34,12 @@
         <dependency>
             <groupId>com.github.wenweihu86.raft</groupId>
             <artifactId>raft-java-core</artifactId>
-            <version>1.8.0</version>
+            <version>1.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.9.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
