--- a/raft-java-core/pom.xml
+++ b/raft-java-core/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.wenweihu86.raft</groupId>
     <artifactId>raft-java-core</artifactId>
-    <version>1.8.0</version>
+    <version>1.9.0</version>
     <packaging>jar</packaging>
 
     <name>raft-java-core</name>
@@ -115,9 +115,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.wenweihu86.rpc</groupId>
-            <artifactId>rpc-java</artifactId>
-            <version>1.8.0</version>
+            <groupId>com.baidu</groupId>
+            <artifactId>brpc-java</artifactId>
+            <version>2.5.2</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
