--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.wenweihu86.raft</groupId>
-    <artifactId>raft-java-all</artifactId>
+    <artifactId>raft-java-parent</artifactId>
     <version>1.9.0</version>
     <packaging>pom</packaging>
 
